--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/asset_tag_admin/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/asset_tag_admin/css/rtl/main.css
@@ -27,7 +27,7 @@
 		.aui-field-input {
 			background-image: url(@theme_image_path@/rtl/common/search.png);
 			background-repeat: no-repeat;
-			background-position: 5px 50%;
+			background-position: 97% 50%;   /*rtl*/
 			padding-right: 25px;   /*rtl*/
 			width: 250px;
 		}
