--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/wiki/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/wiki/css/rtl/main.css
@@ -190,7 +190,7 @@
 
 	.history-navigation .next {
 		background-image: url(@theme_image_path@/rtl/arrows/paging_next.png);
-		background-position: 100% 0;
+		background-position: left 0;   /*rtl*/
 		float: left;   /*rtl*/
 		padding-left: 15px;   /*rtl*/
 	}
@@ -206,11 +206,11 @@
 	}
 
 	.history-navigation span.next {
-		background-position: 100% 100%;
+		background-position: left 100%;   /*rtl*/
 	}
 
 	.history-navigation span.previous {
-		background-position: 0 100%;
+		background-position: right 100%;   /*rtl*/
 	}
 
 	.history-navigation {
