--- a/themes/daka-theme/docroot/css/rtl/base.css
+++ b/themes/daka-theme/docroot/css/rtl/base.css
@@ -25,7 +25,7 @@ address, caption, cite, code, dfn, th, var {
 }
 
 caption, th {
-	text-align: right;
+	text-align: right;   /*rtl*/
 }
 
 q:before, q:after {
@@ -69,7 +69,7 @@ blockquote, ul, ol, dl {
 }
 
 ol, ul, dl {
-	margin-right: 2em;
+	margin-right: 2em;   /*rtl*/
 }
 
 ol {
@@ -89,7 +89,7 @@ ol ol {
 }
 
 dl dd {
-	margin-right: 1em;
+	margin-right: 1em;   /*rtl*/
 }
 
 th {
@@ -158,20 +158,20 @@ body.html-editor {
 }
 
 .html-editor.portlet-message-boards blockquote {
-	background: #EEF0F2 url(../../images/rtl/message_boards/quoteleft.png) no-repeat 5px 5px;
+	background: #EEF0F2 url(../../images/rtl/message_boards/quoteleft.png) no-repeat 96% 5px;   /*rtl*/
 	border: 1px solid #777;
 	position: relative;
 	padding: 5px 45px;
 }
 
 .html-editor.portlet-message-boards blockquote:after {
-	background: url(../../images/rtl/message_boards/quoteright.png) no-repeat 50%;
+	background: url(../../images/rtl/message_boards/quoteleft.png) no-repeat 50%;
 	bottom: 5px;
 	content: '';
 	display: block;
 	height: 24px;
 	position: absolute;
-	left: 5px;
+	left: 5px;   /*rtl*/
 	width: 31px;
 	z-index: 999;
 }
@@ -232,7 +232,7 @@ code, pre {
 
 .portal-add-content {
 	background: #FFF;
-	text-align: right;
+	text-align: right;   /*rtl*/
 	z-index: 20;
 }
 
@@ -246,7 +246,7 @@ code, pre {
 	background: url(../../images/rtl/progress_bar/loading_animation.gif) no-repeat top center;
 	margin-top: 10px;
 	padding-top: 40px;
-	text-align: right;
+	text-align: right;   /*rtl*/
 }
 
 /* ---------- Separator ---------- */
@@ -260,7 +260,7 @@ hr, .separator {
 .update-available {
 	margin-top: 10px;
 	padding: 2px;
-	text-align: right;
+	text-align: right;   /*rtl*/
 }
 
 /* ---------- Text highlighting ---------- */
