--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/calendar/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/calendar/css/rtl/main.css
@@ -36,13 +36,17 @@
 		.day-number {
 			border: 1px solid #fff;
 			border-bottom-width: 0;
-			font-size: 110px;
+			font-size: 89px;
 			font-weight: normal;
 			line-height: 1.2;
 			margin: 0;
 			padding-bottom: 5px;
 			vertical-align: middle;
 
+		}
+
+		.day-month {
+			font-size: 1.8em;
 		}
 	}
 
@@ -235,7 +239,7 @@
 .ie {
 	.portlet-calendar {
 		.calendar-container {
-			background-position: 0 98%;
+			background-position: right 98%;   /*rtl*/
 		}
 	}
 }
