--- a/hooks/bidi-hook/docroot/custom_jsps/html/portlet/social_activity/css/rtl/main.css
+++ b/hooks/bidi-hook/docroot/custom_jsps/html/portlet/social_activity/css/rtl/main.css
@@ -132,7 +132,7 @@
 
 			.action-field {
 				background-image: url(@theme_image_path@/rtl/common/add.png);
-				background-position: 5px 50%;
+				background-position: 97% 50%;   /*rtl*/
 				background-repeat: no-repeat;
 				padding-right: 25px;   /*rtl*/
 			}
