--- a/themes/daka-theme/docroot/css/rtl/custom.css
+++ b/themes/daka-theme/docroot/css/rtl/custom.css
@@ -9,7 +9,7 @@
 /* ---------- Base styles ---------- */
 
 body {
-	background: #EEF0F2;
+	/* background: #EEF0F2; */
 	font-size: 11px;
 }
 
@@ -32,7 +32,7 @@ hr, .separator {
 #wrapper {
 	background: none;
 	margin: 0 auto;
-	max-width: 90%;
+	max-width: 80%;
 	min-width: 960px;
 	position: relative;
 }
@@ -49,14 +49,14 @@ hr, .separator {
 }
 
 .site-title .site-name {
-	background: #555 url(../../images/rtl/common/site_icon.png) no-repeat 15px 50%;
+	background: #555 url(../../images/rtl/common/site_icon.png) no-repeat 90% 50%;   /*rtl*/
 	color: #FFF;
 	display: block;
-	float: left;
+	float: left;   /*rtl*/
 	font-size: 1em;
 	font-weight: bold;
-	margin: 15px 20px 0px 0px;
-	padding: 7px 17px 7px 40px;
+	margin: 15px 20px 0 0;   /*rtl*/
+	padding: 7px 40px 7px 17px;   /*rtl*/
 	position: relative;
 	text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
 }
@@ -86,7 +86,7 @@ hr, .separator {
 	content: '';
 	display: block;
 	height: 10px;
-	right: 24px;
+	right: 24px;   /*rtl*/
 	position: absolute;
 	top: 50%;
 	width: 10px;
@@ -94,16 +94,16 @@ hr, .separator {
 
 #skip-to-content:focus {
 	clip: rect(auto auto auto auto);
-	left: 0;
+	left: 0;   /*rtl*/
 	z-index: 200;
 }
 
 #sign-in {
-	background: url(../../images/rtl/common/key.png) no-repeat 3px 50%;
+	background: url(../../images/rtl/common/key.png) no-repeat 97% 50%;   /*rtl*/
 	font-weight: bold;
-	padding: 5px 5px 5px 25px;
+	padding: 5px 25px 5px 5px;   /*rtl*/
 	position: absolute;
-	left: 0;
+	left: 0;   /*rtl*/
 	top: -1.2em;
 }
 
@@ -118,7 +118,7 @@ hr, .separator {
 /* ---------- Main navigation ---------- */
 
 #navigation {
-	background: #414445 url(../../images/rtl/navigation/bg.png) repeat-x right 0;
+	background: #414445 url(../../images/rtl/navigation/bg.png) repeat-x right 0;   /*rtl*/
 	clear: both;
 	margin: 0 auto 5px;
 	min-height: 2.2em;
@@ -185,7 +185,7 @@ hr, .separator {
 }
 
 .ie6 #navigation ul.child-menu-visible, .ie6 #navigation li.hover .child-menu, .ie7 #navigation ul.child-menu-visible, .ie7 #navigation li.hover ul.child-menu {
-	right: 0;
+	right: 0;   /*rtl*/
 	top: 25px;
 }
 
@@ -213,7 +213,7 @@ hr, .separator {
 }
 
 #navigation .child-menu .selected a {
-	background: #020509 url(../../images/rtl/navigation/bullet_selected.png) no-repeat 5px 50%;
+	background: #020509 url(../../images/rtl/navigation/bullet_selected.png) no-repeat 96% 50%;   /*rtl*/
 }
 
 .nav-menu-style-arrows ul {
@@ -227,11 +227,11 @@ hr, .separator {
 	border: 1px solid #C8C9CA;
 	margin: 0 0 10px;
 	padding: 3px;
-	text-align: right;
+	text-align: right;   /*rtl*/
 }
 
 .portlet-topper {
-	background: #D4D4D4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+	background: #D4D4D4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;   /*rtl*/
 	border: 1px solid;
 	border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
 	font-size: 1.1em;
@@ -246,10 +246,11 @@ hr, .separator {
 }
 
 .signed-in.controls-visible .portlet-title {
-	padding-right: 80px;
+	padding-right: 80px;   /*rtl*/
 }
 
 .lfr-portlet-title-editable {
+	direction: ltr;   /*rtl	*/
 	margin-top: -4px;
 	z-index: 9999;
 }
@@ -292,7 +293,7 @@ hr, .separator {
 /* ---------- Footer ---------- */
 
 #footer {
-	text-align: left;
+	text-align: left;   /*rtl*/
 }
 
 /* ---------- Site breadcrumbs ---------- */
@@ -307,23 +308,20 @@ hr, .separator {
 	border: 1px solid #DEDEDE;
 	border-color: #C0C2C5;
 	margin: 0;
-	/*daka*/
-	direction: rtl;
-	text-align: right;
 }
 
 .site-breadcrumbs li {
 	background-image: none;
-	margin-left: 0;
-	padding-right: 0.75em;
-	padding-left: 0;
-	direction: rtl;
+	margin-left: 0;   /*rtl*/
+	padding-right: 0.75em;   /*rtl*/
+	padding-left: 0;   /*rtl*/
+	direction: ltr;
 }
 
 .site-breadcrumbs li span {
-	background: url(../../images/rtl/common/breadcrumbs.png) no-repeat left 50%;
+	background: url(../../images/rtl/common/breadcrumbs.png) no-repeat 0 50%;   /*rtl*/
 	display: block;
-	padding: 0.5em 0px 0.5em 15px;
+	padding: 0.5em 0 0.5em 15px;   /*rtl*/
 }
 
 .site-breadcrumbs li span a {
@@ -343,7 +341,7 @@ hr, .separator {
 .site-breadcrumbs .last {
 	font-size: 1em;
 	margin-top: 0;
-	padding-left: 0;
+	padding-left: 0;   /*rtl*/
 }
 
 .site-breadcrumbs .last span {
@@ -385,7 +383,7 @@ hr, .separator {
 }
 
 .aui-combobox .aui-field {
-	float: right;
+	float: right;   /*rtl*/
 	line-height: 0;
 }
 
@@ -427,10 +425,10 @@ hr, .separator {
 }
 
 .aui-combobox .aui-toolbar-first {
-	-moz-border-radius-topright: 0;
-	-moz-border-radius-bottomright: 0;
-	-webkit-border-top-right-radius: 0;
-	-webkit-border-bottom-right-radius: 0;
-	border-top-right-radius: 0;
-	border-bottom-right-radius: 0;
+	-moz-border-radius-topright: 0;   /*rtl*/
+	-moz-border-radius-bottomright: 0;   /*rtl*/
+	-webkit-border-top-right-radius: 0;   /*rtl*/
+	-webkit-border-bottom-right-radius: 0;   /*rtl*/
+	border-top-right-radius: 0;   /*rtl*/
+	border-bottom-right-radius: 0;   /*rtl*/
 }
