--- a/themes/daka-theme/docroot/css/rtl/custom_common.css
+++ b/themes/daka-theme/docroot/css/rtl/custom_common.css
@@ -5,10 +5,10 @@
 }
 
 .breadcrumbs-horizontal li {
-	background: url(../../images/rtl/arrows/05_right.png) no-repeat left 50%;
-	margin-left: 5px;
+	background: url(../../images/rtl/arrows/05_right.png) no-repeat 0 50%;   /*rtl*/
+	margin-left: 5px;   /*rtl*/
 	max-width: 50%;
-	padding-left: 15px;
+	padding-left: 15px;   /*rtl*/
 }
 
 .breadcrumbs-vertical li {
@@ -45,16 +45,16 @@
 /* ---------- Hidden Accessible ---------- */
 
 #skip-to-content, #banner h2, #banner h3, #navigation h1, .site-breadcrumbs h1 {
-	clip: rect(0 0 0 0);
+	clip: rect(0 0 0 0);   /*rtl*/
 	position: absolute;
 }
 
 .opens-new-window-accessible {
-	background: url(../../images/rtl/common/open_window.png) no-repeat right 50%;
+	background: url(../../images/rtl/common/open_window.png) no-repeat right 50%;   /*rtl*/
 	display: inline-block;
 	font-size: 0;
 	height: 11px;
-	margin-right: 2px;
+	margin-right: 2px;   /*rtl*/
 	overflow: hidden;
 	text-indent: -9999px;
 	vertical-align: top;
@@ -64,15 +64,15 @@
 /* ---------- Extras ---------- */
 
 .lfr-title-scope-selector {
-	-moz-border-radius-bottomright: 4px;
-	-webkit-border-bottom-right-radius: 4px;
-	border-bottom-right-radius: 4px;
+	-moz-border-radius-bottomright: 4px;   /*rtl*/
+	-webkit-border-bottom-right-radius: 4px;   /*rtl*/
+	border-bottom-right-radius: 4px;   /*rtl*/
 }
 
 .lfr-title-scope-selector {
-	-moz-border-radius-bottomleft: 4px;
-	-webkit-border-bottom-left-radius: 4px;
-	border-bottom-left-radius: 4px;
+	-moz-border-radius-bottomleft: 4px;   /*rtl*/
+	-webkit-border-bottom-left-radius: 4px;   /*rtl*/
+	border-bottom-left-radius: 4px;   /*rtl*/
 }
 
 .logo .current-site, #navigation, #navigation a, .portlet, .portlet-topper, .site-breadcrumbs ul, .aui-form-validator-message {
