--- a/themes/daka-theme/docroot/css/rtl/forms.css
+++ b/themes/daka-theme/docroot/css/rtl/forms.css
@@ -13,7 +13,7 @@
 }
 
 @mixin button-default {
-	background: #D4D4D4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+	background: #D4D4D4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;   /*rtl*/
 	border: 1px solid;
 	border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
 	color: #34404F;
@@ -26,20 +26,20 @@
 }
 
 @mixin button-disabled {
-	background: #D4D4D4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;
+	background: #D4D4D4 url(../../images/rtl/portlet/header_bg.png) repeat-x right 0;   /*rtl*/
 	border-color: #C8C9CA #9E9E9E #9E9E9E #C8C9CA;
 	color: #555;
 	opacity: 0.5;
 }
 
 @mixin button-hover {
-	background: #B9CED9 url(../../images/rtl/application/state_hover_bg.png) repeat-x right 0;
+	background: #B9CED9 url(../../images/rtl/application/state_hover_bg.png) repeat-x right 0;   /*rtl*/
 	border-color: #627782;
 	color: #369;
 }
 
 @mixin button-focus {
-	background: #EBEBEB url(../../images/rtl/application/state_active_bg.png) repeat-x right 0;
+	background: #EBEBEB url(../../images/rtl/application/state_active_bg.png) repeat-x right 0;   /*rtl*/
 	border-color: #555;
 }
 
@@ -65,13 +65,13 @@ fieldset {
 .aui-field-inline, .aui-field-row {
 	.aui-field-content {
 		margin: 0;
-		margin-left: 5px;
+		margin-left: 5px;   /*rtl*/
 	}
 }
 
 .aui-search-bar {
 	.aui-field-content {
-		margin-left: 0;
+		margin-left: 0;   /*rtl*/
 	}
 
 	.aui-field-content, .aui-button-content {
