--- a/themes/daka-theme/docroot/templates/portal_normal.vm
+++ b/themes/daka-theme/docroot/templates/portal_normal.vm
@@ -25,7 +25,7 @@ $theme.include($body_top_include)
 		<div id="heading">
 			<h1 class="site-title">
 				<a class="$logo_css_class" href="$site_default_url" title="#language("go-to") $site_name">
-					<img alt="$logo_description" height="$site_logo_height" src="$site_logo" width="$site_logo_width" />
+					<img alt="$logo_description" height="auto" src="$images_folder/daka-logo.png" width="auto" />
 				</a>
 
 				#if ($show_site_name)
